# PorterStemmerDutch

./: .gitignore  LICENSE  PorterStemmerDutch.cabal  README.md  stack.yaml
.stack-work/install/x86_64-osx/lts-9.16/8.0.2/flag-cache/: PorterStemmerDutch-0.1.0.0
