name:                PorterStemmerDutch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jelmervisser/PorterStemmerDutch#readme
license:             MIT
license-file:        LICENSE
author:              Jelmer Visser
maintainer:          viss1401@student.nhl.nl
copyright:           2017 Jelmer Visser
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable PorterStemmerDutch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
